--- a/evap/static/scss/evap.scss
+++ b/evap/static/scss/evap.scss
@@ -7,7 +7,6 @@
 @import "components";
 @import "adjustments";
 @import "utilities";
-@import "print";
 
 html {
     position: relative;
@@ -135,4 +134,8 @@ td.icon {
     max-height: 170px;
     overflow-y: auto;
     padding-left: 4px;
+}
+
+@media print {
+    @import "print";
 }
